--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -68,7 +68,7 @@
     text-transform: uppercase;
 
     a{
-        font-size: 15px;
+        font-size: 16px;
         letter-spacing: 3px;
 
         @include laptop {
@@ -76,13 +76,11 @@
             letter-spacing: 2px;
         }
         @include max_tablet {
-            font-size: 17px;
-            line-height: 27px;
             @include transition(all, 0);
         }
     }
     > .container{
-        background-color: rgba(black, 0.72);
+        background-color: rgba(black, 0.75);
     }
 }
 .navbar-nav {
@@ -97,7 +95,7 @@
 .navbar-inverse .navbar-nav > .active > a:hover, 
 .navbar-inverse .navbar-nav > .active > a:focus {
     background-color: transparent;
-    color: $red;
+    color: $blue;
 }
 .navbar-inverse {
     background-color: transparent;//rgba(black, 1);
