--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -370,7 +370,7 @@ p {
 }
 /* line 82, ../scss/_navbar.scss */
 .navbar > .container {
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* line 86, ../scss/_navbar.scss */
@@ -1189,7 +1189,7 @@ a:hover {
   }
 }
 
-/* line 179, ../scss/custom.scss */
+/* line 180, ../scss/custom.scss */
 .thumbnail {
   padding: 0;
   margin-bottom: 1%;
@@ -1198,7 +1198,7 @@ a:hover {
   -o-transition: all, 0s;
   transition: all, 0s;
 }
-/* line 186, ../scss/custom.scss */
+/* line 187, ../scss/custom.scss */
 .thumbnail h3 {
   -webkit-transition: background-color, 1s;
   -moz-transition: background-color, 1s;
@@ -1211,39 +1211,46 @@ a:hover {
   font-family: "Dosis", sans-serif !important;
   background-color: rgba(255, 255, 255, 0.1);
 }
-/* line 194, ../scss/custom.scss */
+/* line 195, ../scss/custom.scss */
 .thumbnail img {
   height: auto !important;
   border: 3px solid rgba(255, 255, 255, 0.1);
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  filter: grayscale(100%);
   -webkit-transition: border, 1s;
   -moz-transition: border, 1s;
   -o-transition: border, 1s;
   transition: border, 1s;
 }
 @media only all and (max-width: 767px) {
-  /* line 194, ../scss/custom.scss */
+  /* line 195, ../scss/custom.scss */
   .thumbnail img {
     width: 100% !important;
   }
 }
-/* line 208, ../scss/custom.scss */
+/* line 210, ../scss/custom.scss */
 .thumbnail .caption {
   text-align: center;
   padding: 10px 0 0 0;
 }
 @media only all and (min-width: 768px) {
-  /* line 217, ../scss/custom.scss */
+  /* line 219, ../scss/custom.scss */
   .thumbnail:hover img {
-    border: 3px solid #b12e4f;
-    border-bottom: 3px solid #b12e4f;
+    border: 3px solid rgba(255, 255, 255, 0.8);
+    border-bottom: 3px solid #666;
+    -webkit-filter: grayscale(0%);
+    -moz-filter: grayscale(0%);
+    filter: grayscale(0%);
     -webkit-transition: border, 0.5s;
     -moz-transition: border, 0.5s;
     -o-transition: border, 0.5s;
     transition: border, 0.5s;
   }
-  /* line 224, ../scss/custom.scss */
+  /* line 227, ../scss/custom.scss */
   .thumbnail:hover h3 {
-    background: #b12e4f;
+    background: #666;
+    color: #b12e4f;
     padding-top: 20px;
     -webkit-transition: background-color, 0.2s;
     -moz-transition: background-color, 0.2s;
@@ -1254,29 +1261,29 @@ a:hover {
     -o-transition: padding, 0.2s;
     transition: padding, 0.2s;
   }
-  /* line 231, ../scss/custom.scss */
+  /* line 235, ../scss/custom.scss */
   .thumbnail:hover i {
-    color: white;
+    color: black;
   }
 }
 
-/* line 237, ../scss/custom.scss */
+/* line 241, ../scss/custom.scss */
 .thumb-title {
   min-height: 58px;
 }
 @media only all and (max-width: 320px) {
-  /* line 237, ../scss/custom.scss */
+  /* line 241, ../scss/custom.scss */
   .thumb-title {
     min-height: 35px;
   }
 }
 
-/* line 245, ../scss/custom.scss */
+/* line 249, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
 
-/* line 255, ../scss/custom.scss */
+/* line 259, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -1284,35 +1291,35 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 261, ../scss/custom.scss */
+/* line 265, ../scss/custom.scss */
 .visit-site {
   margin: 40px 0;
 }
 
-/* line 265, ../scss/custom.scss */
+/* line 269, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
   overflow: hidden;
 }
-/* line 270, ../scss/custom.scss */
+/* line 274, ../scss/custom.scss */
 .col-content ul {
   list-style: disc !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 265, ../scss/custom.scss */
+  /* line 269, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 265, ../scss/custom.scss */
+  /* line 269, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
 }
 
-/* line 282, ../scss/custom.scss */
+/* line 286, ../scss/custom.scss */
 .portfolio-desc {
   padding: 15px 0 45px 0;
 }
@@ -1320,16 +1327,16 @@ a:hover {
 /* 
  *  Soliloquy Slider 
  */
-/* line 291, ../scss/custom.scss */
+/* line 295, ../scss/custom.scss */
 .soliloquy-container img {
   width: 100%;
   height: auto;
 }
-/* line 295, ../scss/custom.scss */
+/* line 299, ../scss/custom.scss */
 .soliloquy-container .soliloquy-direction-nav {
   display: block !important;
 }
-/* line 298, ../scss/custom.scss */
+/* line 302, ../scss/custom.scss */
 .soliloquy-container .soliloquy-control-nav, .soliloquy-container .soliloquy-prev, .soliloquy-container .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -1338,7 +1345,7 @@ a:hover {
   -o-transition: opacity, 0.5s;
   transition: opacity, 0.5s;
 }
-/* line 303, ../scss/custom.scss */
+/* line 307, ../scss/custom.scss */
 .soliloquy-container:hover .soliloquy-control-nav, .soliloquy-container:hover .soliloquy-prev, .soliloquy-container:hover .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -1348,7 +1355,7 @@ a:hover {
   transition: opacity, 0.5s;
 }
 
-/* line 310, ../scss/custom.scss */
+/* line 314, ../scss/custom.scss */
 .design-slider {
   margin: 26px 0;
 }
@@ -1357,13 +1364,13 @@ a:hover {
  *  Twitter feed 
  */
 @media only all and (max-width: 991px) {
-  /* line 320, ../scss/custom.scss */
+  /* line 324, ../scss/custom.scss */
   .kmeta {
     font-size: 15px;
   }
 }
 
-/* line 325, ../scss/custom.scss */
+/* line 329, ../scss/custom.scss */
 .ktext {
   line-height: 19px !important;
   margin: 15px 0 !important;
@@ -1372,17 +1379,17 @@ a:hover {
 /* 
  *  Contact Form 
  */
-/* line 336, ../scss/custom.scss */
+/* line 340, ../scss/custom.scss */
 .cscfForm > p {
   margin-bottom: 20px;
 }
-/* line 339, ../scss/custom.scss */
+/* line 343, ../scss/custom.scss */
 .cscfForm label {
   margin-bottom: 10px;
   color: #2ea2cc;
 }
 
-/* line 345, ../scss/custom.scss */
+/* line 349, ../scss/custom.scss */
 #frmCSCF .btn {
   border: #bf7485;
   background-color: #bf7485;
@@ -1392,7 +1399,7 @@ a:hover {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 350, ../scss/custom.scss */
+/* line 354, ../scss/custom.scss */
 #frmCSCF .btn:hover {
   background-color: #2ea2cc;
   -webkit-transition: background-color, 0.25s;
@@ -1404,159 +1411,159 @@ a:hover {
 /* 
  *  Media Queries thumbs
  */
-/* line 361, ../scss/custom.scss */
+/* line 365, ../scss/custom.scss */
 .mq-list {
   padding-top: 30px;
 }
-/* line 363, ../scss/custom.scss */
+/* line 367, ../scss/custom.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 363, ../scss/custom.scss */
+  /* line 367, ../scss/custom.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 363, ../scss/custom.scss */
+  /* line 367, ../scss/custom.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 363, ../scss/custom.scss */
+  /* line 367, ../scss/custom.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 378, ../scss/custom.scss */
+/* line 382, ../scss/custom.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
-  /* line 378, ../scss/custom.scss */
+  /* line 382, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 378, ../scss/custom.scss */
+  /* line 382, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8.1%;
   }
 }
-/* line 387, ../scss/custom.scss */
+/* line 391, ../scss/custom.scss */
 .mq-list .tablet {
   width: 19.5%;
 }
 @media only all and (max-width: 767px) {
-  /* line 387, ../scss/custom.scss */
+  /* line 391, ../scss/custom.scss */
   .mq-list .tablet {
     width: 19.4%;
   }
 }
-/* line 393, ../scss/custom.scss */
+/* line 397, ../scss/custom.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 396, ../scss/custom.scss */
+/* line 400, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
 }
 
-/* line 403, ../scss/custom.scss */
+/* line 407, ../scss/custom.scss */
 .entry-content p {
   margin-bottom: 15px;
 }
-/* line 406, ../scss/custom.scss */
+/* line 410, ../scss/custom.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 413, ../scss/custom.scss */
+/* line 417, ../scss/custom.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 419, ../scss/custom.scss */
+  /* line 423, ../scss/custom.scss */
   .credits td {
     padding: 1px !important;
   }
 }
 
-/* line 425, ../scss/custom.scss */
+/* line 429, ../scss/custom.scss */
 .media, .description {
   margin-bottom: 30px;
 }
 
-/* line 429, ../scss/custom.scss */
+/* line 433, ../scss/custom.scss */
 .media p {
   margin: 0;
 }
-/* line 432, ../scss/custom.scss */
+/* line 436, ../scss/custom.scss */
 .media img {
   margin: 0;
 }
-/* line 436, ../scss/custom.scss */
+/* line 440, ../scss/custom.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 441, ../scss/custom.scss */
+/* line 445, ../scss/custom.scss */
 .single-design .media {
   border: 1px solid black;
 }
 
-/* line 449, ../scss/custom.scss */
+/* line 453, ../scss/custom.scss */
 .hero-right {
   margin-bottom: 40px;
 }
 
-/* line 453, ../scss/custom.scss */
+/* line 457, ../scss/custom.scss */
 .col-page-left {
   padding: 0 40px 0 0;
 }
 
-/* line 456, ../scss/custom.scss */
+/* line 460, ../scss/custom.scss */
 .above-header {
   overflow: visible;
   height: 500px;
 }
-/* line 460, ../scss/custom.scss */
+/* line 464, ../scss/custom.scss */
 .above-header h1 {
   margin-top: 50px;
   font-size: 80px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 460, ../scss/custom.scss */
+  /* line 464, ../scss/custom.scss */
   .above-header h1 {
     font-size: 70px;
   }
 }
 @media only all and (max-width: 1199px) {
-  /* line 460, ../scss/custom.scss */
+  /* line 464, ../scss/custom.scss */
   .above-header h1 {
     font-size: 65px;
   }
 }
 
-/* line 471, ../scss/custom.scss */
+/* line 475, ../scss/custom.scss */
 #above-header-container {
   height: 100%;
 }
 
-/* line 475, ../scss/custom.scss */
+/* line 479, ../scss/custom.scss */
 #cherry-blossoms {
   width: 100%;
   height: 100%;
   pointer-events: none;
 }
 
-/* line 480, ../scss/custom.scss */
+/* line 484, ../scss/custom.scss */
 #cb-a {
   background: url('/wp-content/themes/jn-wpbs/assets/img/cherry-blossom.png?1387977909');
   background-position: -400px 100px;
@@ -1569,7 +1576,7 @@ a:hover {
 /*
  *  Admin Menu 
  */
-/* line 494, ../scss/custom.scss */
+/* line 498, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
