--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1214,10 +1214,16 @@ a:hover {
 /* line 195, ../scss/custom.scss */
 .thumbnail img {
   height: auto !important;
-  border: 3px solid rgba(255, 255, 255, 0.2);
+  border: 3px solid #666;
   -webkit-filter: grayscale(100%);
   -moz-filter: grayscale(100%);
   filter: grayscale(100%);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+  opacity: 0.5;
+  -webkit-transition: opacity, 1s;
+  -moz-transition: opacity, 1s;
+  -o-transition: opacity, 1s;
+  transition: opacity, 1s;
   -webkit-transition: border, 1s;
   -moz-transition: border, 1s;
   -o-transition: border, 1s;
@@ -1246,6 +1252,12 @@ a:hover {
     -moz-transition: border, 0.5s;
     -o-transition: border, 0.5s;
     transition: border, 0.5s;
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+    opacity: 1;
+    -webkit-transition: opacity, 0.5s;
+    -moz-transition: opacity, 0.5s;
+    -o-transition: opacity, 0.5s;
+    transition: opacity, 0.5s;
   }
   /* line 227, ../scss/custom.scss */
   .thumbnail:hover h3 {
