--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -370,7 +370,7 @@ p {
 }
 /* line 82, ../scss/_navbar.scss */
 .navbar > .container {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.81);
 }
 
 /* line 86, ../scss/_navbar.scss */
@@ -1214,7 +1214,7 @@ a:hover {
 /* line 195, ../scss/custom.scss */
 .thumbnail img {
   height: auto !important;
-  border: 3px solid #999;
+  border: 3px dotted #999;
   -webkit-filter: grayscale(100%);
   -moz-filter: grayscale(100%);
   filter: grayscale(100%);
@@ -1235,13 +1235,17 @@ a:hover {
     width: 100% !important;
   }
 }
-/* line 210, ../scss/custom.scss */
+/* line 208, ../scss/custom.scss */
+.thumbnail i {
+  color: #bf7485;
+}
+/* line 211, ../scss/custom.scss */
 .thumbnail .caption {
   text-align: center;
   padding: 10px 0 0 0;
 }
 @media only all and (min-width: 768px) {
-  /* line 219, ../scss/custom.scss */
+  /* line 220, ../scss/custom.scss */
   .thumbnail:hover img {
     border: 3px solid #b12e4f;
     border-bottom: 3px solid #b12e4f;
@@ -1259,7 +1263,7 @@ a:hover {
     -o-transition: opacity, 0.5s;
     transition: opacity, 0.5s;
   }
-  /* line 227, ../scss/custom.scss */
+  /* line 228, ../scss/custom.scss */
   .thumbnail:hover h3 {
     background: #b12e4f;
     color: white;
@@ -1273,29 +1277,29 @@ a:hover {
     -o-transition: padding, 0.2s;
     transition: padding, 0.2s;
   }
-  /* line 235, ../scss/custom.scss */
+  /* line 236, ../scss/custom.scss */
   .thumbnail:hover i {
     color: black;
   }
 }
 
-/* line 241, ../scss/custom.scss */
+/* line 242, ../scss/custom.scss */
 .thumb-title {
   min-height: 58px;
 }
 @media only all and (max-width: 320px) {
-  /* line 241, ../scss/custom.scss */
+  /* line 242, ../scss/custom.scss */
   .thumb-title {
     min-height: 35px;
   }
 }
 
-/* line 249, ../scss/custom.scss */
+/* line 250, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
 
-/* line 259, ../scss/custom.scss */
+/* line 260, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -1303,35 +1307,35 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 265, ../scss/custom.scss */
+/* line 266, ../scss/custom.scss */
 .visit-site {
   margin: 40px 0;
 }
 
-/* line 269, ../scss/custom.scss */
+/* line 270, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
   overflow: hidden;
 }
-/* line 274, ../scss/custom.scss */
+/* line 275, ../scss/custom.scss */
 .col-content ul {
   list-style: disc !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 269, ../scss/custom.scss */
+  /* line 270, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 269, ../scss/custom.scss */
+  /* line 270, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
 }
 
-/* line 286, ../scss/custom.scss */
+/* line 287, ../scss/custom.scss */
 .portfolio-desc {
   padding: 15px 0 45px 0;
 }
@@ -1339,16 +1343,16 @@ a:hover {
 /* 
  *  Soliloquy Slider 
  */
-/* line 295, ../scss/custom.scss */
+/* line 296, ../scss/custom.scss */
 .soliloquy-container img {
   width: 100%;
   height: auto;
 }
-/* line 299, ../scss/custom.scss */
+/* line 300, ../scss/custom.scss */
 .soliloquy-container .soliloquy-direction-nav {
   display: block !important;
 }
-/* line 302, ../scss/custom.scss */
+/* line 303, ../scss/custom.scss */
 .soliloquy-container .soliloquy-control-nav, .soliloquy-container .soliloquy-prev, .soliloquy-container .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -1357,7 +1361,7 @@ a:hover {
   -o-transition: opacity, 0.5s;
   transition: opacity, 0.5s;
 }
-/* line 307, ../scss/custom.scss */
+/* line 308, ../scss/custom.scss */
 .soliloquy-container:hover .soliloquy-control-nav, .soliloquy-container:hover .soliloquy-prev, .soliloquy-container:hover .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -1367,7 +1371,7 @@ a:hover {
   transition: opacity, 0.5s;
 }
 
-/* line 314, ../scss/custom.scss */
+/* line 315, ../scss/custom.scss */
 .design-slider {
   margin: 26px 0;
 }
@@ -1376,13 +1380,13 @@ a:hover {
  *  Twitter feed 
  */
 @media only all and (max-width: 991px) {
-  /* line 324, ../scss/custom.scss */
+  /* line 325, ../scss/custom.scss */
   .kmeta {
     font-size: 15px;
   }
 }
 
-/* line 329, ../scss/custom.scss */
+/* line 330, ../scss/custom.scss */
 .ktext {
   line-height: 19px !important;
   margin: 15px 0 !important;
@@ -1391,17 +1395,17 @@ a:hover {
 /* 
  *  Contact Form 
  */
-/* line 340, ../scss/custom.scss */
+/* line 341, ../scss/custom.scss */
 .cscfForm > p {
   margin-bottom: 20px;
 }
-/* line 343, ../scss/custom.scss */
+/* line 344, ../scss/custom.scss */
 .cscfForm label {
   margin-bottom: 10px;
   color: #2ea2cc;
 }
 
-/* line 349, ../scss/custom.scss */
+/* line 350, ../scss/custom.scss */
 #frmCSCF .btn {
   border: #bf7485;
   background-color: #bf7485;
@@ -1411,7 +1415,7 @@ a:hover {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 354, ../scss/custom.scss */
+/* line 355, ../scss/custom.scss */
 #frmCSCF .btn:hover {
   background-color: #2ea2cc;
   -webkit-transition: background-color, 0.25s;
@@ -1423,159 +1427,159 @@ a:hover {
 /* 
  *  Media Queries thumbs
  */
-/* line 365, ../scss/custom.scss */
+/* line 366, ../scss/custom.scss */
 .mq-list {
   padding-top: 30px;
 }
-/* line 367, ../scss/custom.scss */
+/* line 368, ../scss/custom.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 367, ../scss/custom.scss */
+  /* line 368, ../scss/custom.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 367, ../scss/custom.scss */
+  /* line 368, ../scss/custom.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 367, ../scss/custom.scss */
+  /* line 368, ../scss/custom.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 382, ../scss/custom.scss */
+/* line 383, ../scss/custom.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
-  /* line 382, ../scss/custom.scss */
+  /* line 383, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 382, ../scss/custom.scss */
+  /* line 383, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8.1%;
   }
 }
-/* line 391, ../scss/custom.scss */
+/* line 392, ../scss/custom.scss */
 .mq-list .tablet {
   width: 19.5%;
 }
 @media only all and (max-width: 767px) {
-  /* line 391, ../scss/custom.scss */
+  /* line 392, ../scss/custom.scss */
   .mq-list .tablet {
     width: 19.4%;
   }
 }
-/* line 397, ../scss/custom.scss */
+/* line 398, ../scss/custom.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 400, ../scss/custom.scss */
+/* line 401, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
 }
 
-/* line 407, ../scss/custom.scss */
+/* line 408, ../scss/custom.scss */
 .entry-content p {
   margin-bottom: 15px;
 }
-/* line 410, ../scss/custom.scss */
+/* line 411, ../scss/custom.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 417, ../scss/custom.scss */
+/* line 418, ../scss/custom.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 423, ../scss/custom.scss */
+  /* line 424, ../scss/custom.scss */
   .credits td {
     padding: 1px !important;
   }
 }
 
-/* line 429, ../scss/custom.scss */
+/* line 430, ../scss/custom.scss */
 .media, .description {
   margin-bottom: 30px;
 }
 
-/* line 433, ../scss/custom.scss */
+/* line 434, ../scss/custom.scss */
 .media p {
   margin: 0;
 }
-/* line 436, ../scss/custom.scss */
+/* line 437, ../scss/custom.scss */
 .media img {
   margin: 0;
 }
-/* line 440, ../scss/custom.scss */
+/* line 441, ../scss/custom.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 445, ../scss/custom.scss */
+/* line 446, ../scss/custom.scss */
 .single-design .media {
   border: 1px solid black;
 }
 
-/* line 453, ../scss/custom.scss */
+/* line 454, ../scss/custom.scss */
 .hero-right {
   margin-bottom: 40px;
 }
 
-/* line 457, ../scss/custom.scss */
+/* line 458, ../scss/custom.scss */
 .col-page-left {
   padding: 0 40px 0 0;
 }
 
-/* line 460, ../scss/custom.scss */
+/* line 461, ../scss/custom.scss */
 .above-header {
   overflow: visible;
   height: 500px;
 }
-/* line 464, ../scss/custom.scss */
+/* line 465, ../scss/custom.scss */
 .above-header h1 {
   margin-top: 50px;
   font-size: 80px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 464, ../scss/custom.scss */
+  /* line 465, ../scss/custom.scss */
   .above-header h1 {
     font-size: 70px;
   }
 }
 @media only all and (max-width: 1199px) {
-  /* line 464, ../scss/custom.scss */
+  /* line 465, ../scss/custom.scss */
   .above-header h1 {
     font-size: 65px;
   }
 }
 
-/* line 475, ../scss/custom.scss */
+/* line 476, ../scss/custom.scss */
 #above-header-container {
   height: 100%;
 }
 
-/* line 479, ../scss/custom.scss */
+/* line 480, ../scss/custom.scss */
 #cherry-blossoms {
   width: 100%;
   height: 100%;
   pointer-events: none;
 }
 
-/* line 484, ../scss/custom.scss */
+/* line 485, ../scss/custom.scss */
 #cb-a {
   background: url('/wp-content/themes/jn-wpbs/assets/img/cherry-blossom.png?1387977909');
   background-position: -400px 100px;
@@ -1588,7 +1592,7 @@ a:hover {
 /*
  *  Admin Menu 
  */
-/* line 498, ../scss/custom.scss */
+/* line 499, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
