--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -211,7 +211,7 @@ h2 {
 h3 {
   margin: 0px 0 15px 0;
   padding: 5px 7px 5px;
-  font-size: 80%;
+  font-size: 95%;
   line-height: 130%;
   letter-spacing: 1px;
     /* @include transition (background, 0.75s);
@@ -1247,8 +1247,8 @@ a:hover {
 @media only all and (min-width: 768px) {
   /* line 220, ../scss/custom.scss */
   .thumbnail:hover img {
-    border: 3px solid #b12e4f;
-    border-bottom: 3px solid #b12e4f;
+    border: 3px dotted #b12e4f;
+    border-bottom: 3px dotted #b12e4f;
     -webkit-filter: grayscale(0%);
     -moz-filter: grayscale(0%);
     filter: grayscale(0%);
