--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -370,7 +370,7 @@ p {
 }
 /* line 82, ../scss/_navbar.scss */
 .navbar > .container {
-  background-color: rgba(0, 0, 0, 0.81);
+  background-color: black;
 }
 
 /* line 86, ../scss/_navbar.scss */
@@ -1211,7 +1211,7 @@ a:hover {
   font-family: "Dosis", sans-serif !important;
   background-color: rgba(255, 255, 255, 0.2);
 }
-/* line 195, ../scss/custom.scss */
+/* line 193, ../scss/custom.scss */
 .thumbnail img {
   height: auto !important;
   border: 3px dotted #ccc;
@@ -1230,8 +1230,11 @@ a:hover {
   transition: border, 1s;
 }
 @media only all and (max-width: 767px) {
-  /* line 195, ../scss/custom.scss */
+  /* line 193, ../scss/custom.scss */
   .thumbnail img {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+    opacity: 1;
+    border: 3px dotted rgba(255, 255, 255, 0.2);
     width: 100% !important;
   }
 }
@@ -1252,10 +1255,6 @@ a:hover {
     -webkit-filter: grayscale(0%);
     -moz-filter: grayscale(0%);
     filter: grayscale(0%);
-    -webkit-transition: border, 0.5s;
-    -moz-transition: border, 0.5s;
-    -o-transition: border, 0.5s;
-    transition: border, 0.5s;
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
     opacity: 1;
     -webkit-transition: opacity, 0.5s;
@@ -1263,7 +1262,7 @@ a:hover {
     -o-transition: opacity, 0.5s;
     transition: opacity, 0.5s;
   }
-  /* line 228, ../scss/custom.scss */
+  /* line 230, ../scss/custom.scss */
   .thumbnail:hover h3 {
     background: #b12e4f;
     color: white;
@@ -1277,29 +1276,29 @@ a:hover {
     -o-transition: padding, 0.2s;
     transition: padding, 0.2s;
   }
-  /* line 236, ../scss/custom.scss */
+  /* line 238, ../scss/custom.scss */
   .thumbnail:hover i {
     color: black;
   }
 }
 
-/* line 242, ../scss/custom.scss */
+/* line 244, ../scss/custom.scss */
 .thumb-title {
   min-height: 58px;
 }
 @media only all and (max-width: 320px) {
-  /* line 242, ../scss/custom.scss */
+  /* line 244, ../scss/custom.scss */
   .thumb-title {
     min-height: 35px;
   }
 }
 
-/* line 250, ../scss/custom.scss */
+/* line 252, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
 
-/* line 260, ../scss/custom.scss */
+/* line 262, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -1307,35 +1306,35 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 266, ../scss/custom.scss */
+/* line 268, ../scss/custom.scss */
 .visit-site {
   margin: 40px 0;
 }
 
-/* line 270, ../scss/custom.scss */
+/* line 272, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
   overflow: hidden;
 }
-/* line 275, ../scss/custom.scss */
+/* line 277, ../scss/custom.scss */
 .col-content ul {
   list-style: disc !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 270, ../scss/custom.scss */
+  /* line 272, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 270, ../scss/custom.scss */
+  /* line 272, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
 }
 
-/* line 287, ../scss/custom.scss */
+/* line 289, ../scss/custom.scss */
 .portfolio-desc {
   padding: 15px 0 45px 0;
 }
@@ -1343,16 +1342,16 @@ a:hover {
 /* 
  *  Soliloquy Slider 
  */
-/* line 296, ../scss/custom.scss */
+/* line 298, ../scss/custom.scss */
 .soliloquy-container img {
   width: 100%;
   height: auto;
 }
-/* line 300, ../scss/custom.scss */
+/* line 302, ../scss/custom.scss */
 .soliloquy-container .soliloquy-direction-nav {
   display: block !important;
 }
-/* line 303, ../scss/custom.scss */
+/* line 305, ../scss/custom.scss */
 .soliloquy-container .soliloquy-control-nav, .soliloquy-container .soliloquy-prev, .soliloquy-container .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -1361,7 +1360,7 @@ a:hover {
   -o-transition: opacity, 0.5s;
   transition: opacity, 0.5s;
 }
-/* line 308, ../scss/custom.scss */
+/* line 310, ../scss/custom.scss */
 .soliloquy-container:hover .soliloquy-control-nav, .soliloquy-container:hover .soliloquy-prev, .soliloquy-container:hover .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -1371,7 +1370,7 @@ a:hover {
   transition: opacity, 0.5s;
 }
 
-/* line 315, ../scss/custom.scss */
+/* line 317, ../scss/custom.scss */
 .design-slider {
   margin: 26px 0;
 }
@@ -1380,13 +1379,13 @@ a:hover {
  *  Twitter feed 
  */
 @media only all and (max-width: 991px) {
-  /* line 325, ../scss/custom.scss */
+  /* line 327, ../scss/custom.scss */
   .kmeta {
     font-size: 15px;
   }
 }
 
-/* line 330, ../scss/custom.scss */
+/* line 332, ../scss/custom.scss */
 .ktext {
   line-height: 19px !important;
   margin: 15px 0 !important;
@@ -1395,17 +1394,17 @@ a:hover {
 /* 
  *  Contact Form 
  */
-/* line 341, ../scss/custom.scss */
+/* line 343, ../scss/custom.scss */
 .cscfForm > p {
   margin-bottom: 20px;
 }
-/* line 344, ../scss/custom.scss */
+/* line 346, ../scss/custom.scss */
 .cscfForm label {
   margin-bottom: 10px;
   color: #2ea2cc;
 }
 
-/* line 350, ../scss/custom.scss */
+/* line 352, ../scss/custom.scss */
 #frmCSCF .btn {
   border: #bf7485;
   background-color: #bf7485;
@@ -1415,7 +1414,7 @@ a:hover {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 355, ../scss/custom.scss */
+/* line 357, ../scss/custom.scss */
 #frmCSCF .btn:hover {
   background-color: #2ea2cc;
   -webkit-transition: background-color, 0.25s;
@@ -1427,172 +1426,190 @@ a:hover {
 /* 
  *  Media Queries thumbs
  */
-/* line 366, ../scss/custom.scss */
+/* line 368, ../scss/custom.scss */
 .mq-list {
   padding-top: 30px;
 }
-/* line 368, ../scss/custom.scss */
+/* line 370, ../scss/custom.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 368, ../scss/custom.scss */
+  /* line 370, ../scss/custom.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 368, ../scss/custom.scss */
+  /* line 370, ../scss/custom.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 368, ../scss/custom.scss */
+  /* line 370, ../scss/custom.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 383, ../scss/custom.scss */
+/* line 385, ../scss/custom.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
-  /* line 383, ../scss/custom.scss */
+  /* line 385, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 383, ../scss/custom.scss */
+  /* line 385, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8.1%;
   }
 }
-/* line 392, ../scss/custom.scss */
+/* line 394, ../scss/custom.scss */
 .mq-list .tablet {
   width: 19.5%;
 }
 @media only all and (max-width: 767px) {
-  /* line 392, ../scss/custom.scss */
+  /* line 394, ../scss/custom.scss */
   .mq-list .tablet {
     width: 19.4%;
   }
 }
-/* line 398, ../scss/custom.scss */
+/* line 400, ../scss/custom.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 401, ../scss/custom.scss */
+/* line 403, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
 }
 
-/* line 408, ../scss/custom.scss */
+/* line 410, ../scss/custom.scss */
 .entry-content p {
   margin-bottom: 15px;
 }
-/* line 411, ../scss/custom.scss */
+/* line 413, ../scss/custom.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 418, ../scss/custom.scss */
+/* line 420, ../scss/custom.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 424, ../scss/custom.scss */
+  /* line 426, ../scss/custom.scss */
   .credits td {
     padding: 1px !important;
   }
 }
 
-/* line 430, ../scss/custom.scss */
+/* line 432, ../scss/custom.scss */
 .media, .description {
   margin-bottom: 30px;
 }
 
-/* line 434, ../scss/custom.scss */
+/* line 436, ../scss/custom.scss */
 .media p {
   margin: 0;
 }
-/* line 437, ../scss/custom.scss */
+/* line 439, ../scss/custom.scss */
 .media img {
   margin: 0;
 }
-/* line 441, ../scss/custom.scss */
+/* line 443, ../scss/custom.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 446, ../scss/custom.scss */
+/* line 448, ../scss/custom.scss */
 .single-design .media {
   border: 1px solid black;
 }
 
-/* line 454, ../scss/custom.scss */
+/* line 456, ../scss/custom.scss */
 .hero-right {
   margin-bottom: 40px;
 }
 
-/* line 458, ../scss/custom.scss */
+/* line 460, ../scss/custom.scss */
 .col-page-left {
   padding: 0 40px 0 0;
 }
 
-/* line 461, ../scss/custom.scss */
+/* line 463, ../scss/custom.scss */
 .above-header {
   overflow: visible;
   height: 500px;
 }
-/* line 465, ../scss/custom.scss */
+/* line 467, ../scss/custom.scss */
 .above-header h1 {
   margin-top: 50px;
   font-size: 80px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 465, ../scss/custom.scss */
+  /* line 467, ../scss/custom.scss */
   .above-header h1 {
     font-size: 70px;
   }
 }
 @media only all and (max-width: 1199px) {
-  /* line 465, ../scss/custom.scss */
+  /* line 467, ../scss/custom.scss */
   .above-header h1 {
     font-size: 65px;
   }
 }
 
-/* line 476, ../scss/custom.scss */
+/* line 478, ../scss/custom.scss */
 #above-header-container {
   height: 100%;
 }
 
-/* line 480, ../scss/custom.scss */
+/* line 482, ../scss/custom.scss */
 #cherry-blossoms {
   width: 100%;
-  height: 100%;
+  height: auto;
   pointer-events: none;
 }
+@media only all and (max-width: 767px) {
+  /* line 482, ../scss/custom.scss */
+  #cherry-blossoms {
+    display: none;
+  }
+}
 
-/* line 485, ../scss/custom.scss */
+/* line 490, ../scss/custom.scss */
 #cb-a {
-  background: url('/wp-content/themes/jn-wpbs/assets/img/cherry-blossom.png?1387977909');
-  background-position: -400px 100px;
+  background: url('/wp-content/themes/jn-wpbs/assets/img/cherry-blossom-left.png?1388930811');
+  background-position: -40px 100px;
   background-repeat: no-repeat;
   height: 999px;
   width: 100%;
   z-index: 21;
 }
+@media only all and (max-width: 991px) {
+  /* line 490, ../scss/custom.scss */
+  #cb-a {
+    background-position: -200px 100px;
+  }
+}
+@media only all and (max-width: 767px) {
+  /* line 490, ../scss/custom.scss */
+  #cb-a {
+    background-position: -400px 100px;
+  }
+}
 
 /*
  *  Admin Menu 
  */
-/* line 499, ../scss/custom.scss */
+/* line 512, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
